# signal-watcher

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: config.example.yaml
scripts/: check.sh  run_loop.sh
src/: monitor.py
src/signal_watcher/: __init__.py  cli.py  config.py  http_client.py  models.py  notifiers.py  state.py
src/signal_watcher/watchers/: __init__.py  base.py  damai.py  web_keyword.py  x_rss.py
tests/: test_notifiers.py  test_state_and_config.py  test_web_keyword.py  test_x_rss.py
